(Format: Year/Month/Day)
Changes for 0.9.4:
*03/06/26:
   * Speedups for having many (particularly stuck) windows (Simon)
     Toolbar.hh/cc IconBar.hh/cc ToolbarHandler.cc Gnome.cc Window.cc
*03/06/25:
   * Applied toggle max vertical/horizontal patch (Thanks MrChuoi mrchuoi<[aT]>yahoo.com)
     Window.hh/cc
   * Fixed compile time option for Toolbar (Henrik)
     --enable-toolbar (default on)
     configure.in, src/Makefile.am, fluxbox.cc
*03/06/24:
   * Added new theme items (Henrik)
      * toolbar.borderWidth: <integer>
      * toolbar.bevelWidth: <integer>
      * toolbar.borderColor: <color>
      * slit.borderWidth: <integer>
      * slit.bevelWidth: <integer>
      * slit.borderColor: <color>
     SlitTheme.hh, ToolbarTheme.hh/cc, Slit.cc, Toolbar.cc
   * Moved toolbar mode resource to ToolbarHandler (Henrik)
     Screen.hh/cc, ToolbarHandler.hh/cc
   * Fixed minor bug in button alignment (Henrik)
     FbWinFrame.cc
   * Fixed minor bug in transparent Slit (Henrik)
     Slit.cc/hh, Screen.cc
   * Emacs keybindings and tab completion for FbRun (Thanks David J Burger)
     FbRun.hh/cc
*03/06/23:
   * Add group persistence over a restart,
     Move most winclient initialisation from FluxboxWindow to WinClient,
     And fix a few bugs (Simon)
     Screen.hh/cc WinClient.hh/cc Window.hh/cc Gnome.cc Slit.hh
   * Moved toolbar resources from BScreen to Toolbar (Henrik)
     Screen.hh/cc, Toolbar.hh/cc
*03/06/22:
   * fluxbox-generate_menu: 
      French locales, (Thanks Tarax <tarax(aT)arkitekts.org> )
      Two additions to the menu (Thanks Pol)
   * Added Xutil for getWMName in Slit, SlitClient and WinClient and made some
     cleaning (Henrik)
     WinClient.cc, Slit.cc, SlitClient.cc
   * New resource name session.screen<num>.slit.maxOver: <bool>   (Henrik)
     This will prevent windows from maximize over the slit
     Slit.cc	
*03/06/20:
   * Moved SlitTheme and SlitClient out from Slit.cc into new files (Henrik)
     SlitClient.hh/cc, SlitTheme.hh